# tinyagent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/tinyagent/: __init__.py  __main__.py  agent.py  budget.py  cli.py  config.py  conversation.py  models.py  pricing.py  router.py
src/tinyagent/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py
